--- a/src/App.less
+++ b/src/App.less
@@ -16,10 +16,21 @@
   overflow-x: auto;
   overflow-y: visible;
 }
+.simulate-button, .training-updates{
+    margin-top:10px;
+    margin-bottom:10px;
+}
 .subtitle {
   font-size: 0.5em;
   vertical-align: middle;
   margin-left: 10px;
+}
+table.no-border tr td{
+    border:none;
+}
+
+table.no-margin{
+    margin:0px;
 }
 .nowrap {
   white-space: nowrap;
@@ -51,7 +62,7 @@ body {
   margin: 0px;
   //margin-left: 50px;
   padding-top: 20px;
-  padding-bottom: 20px;
+  //padding-bottom: 20px;
   //padding-left: 50px;
   //padding-right: 50px;
 }
@@ -152,6 +163,10 @@ body {
     margin-right:0px;
 }
 
+.ko{
+  filter: sepia(100%);
+}
+
 .game-menu{
     margin-bottom:-20px;
 }
@@ -169,7 +184,7 @@ td.min {
     white-space: nowrap;
 }
 
-.progress-bar{
+.rating-bar .progress-bar{
     text-align: left;
     padding-left:10px;
 }
@@ -177,6 +192,7 @@ td.min {
 .player-card{
     border-radius:20px;
     margin-bottom:10px;
+    box-shadow: 0px 20px 30px 3px rgba(0, 0, 0, 0.55);    
 }
 
 .player-card-image img{
@@ -205,6 +221,76 @@ td.min {
     padding-bottom:0px;
 }
 
+button.compact{
+    padding-top:0px;
+    padding-bottom:0px;    
+}
+
+.battlefield{
+  background: linear-gradient(to bottom, rgba(140,122,122,1) 0%, rgba(175,135,124,1) 65%, rgba(175,135,124,1) 100%) fixed;
+  background: url('../public/assets/background.jpg') no-repeat center center fixed;
+  background-size: cover;
+  margin-top:-20px;
+  margin-bottom:-20px;
+}
+
+.battle-card{
+    box-shadow: 0px 20px 30px 3px rgba(0, 0, 0, 0.55);
+    border-bottom-left-radius:8px;
+    border-bottom-right-radius:8px;
+}
+
+.battle-card-details{
+    background-color:black;
+    margin-bottom:10px;
+    padding-bottom:4px;
+    border-bottom-left-radius:8px;
+    border-bottom-right-radius:8px;    
+}
+
+.battle-card-image{
+    padding:0px;
+    margin:0px;
+}
+
+.battle-card img{
+    width:100%;
+    border-top-left-radius:8px;
+    border-top-right-radius:8px;    
+}
+
+.battle-card .progress{
+    margin:2px;
+    height:10px;
+}
+
+.battle-card-name{
+    text-align:center;
+    padding-top:3px;
+}
+
+.battle-card{
+    position:relative;
+}
+
+.battle-card-statuses{
+    position:absolute;
+    top:5px;
+    right:5px;
+}
+
+.battle-card-status{
+    height: 30px;
+      width: 30px;
+    text-align:center;
+    line-height: 30px;
+    color:white;
+      border-radius: 50%;
+      display: inline-block;
+    margin:1px;
+    font-weight: bolder;
+}
+
 @media only screen and (min-width: 768px) {
   .sidebar .container-fluid {
     padding: 0px;
@@ -215,5 +301,25 @@ td.min {
 }
 
 @media only screen and (max-width: 767px) {
- 
+    .battlefield{
+            font-size:0.5em;
+    }
+    
+    .battlefield .panel-body{
+        padding:5px;
+    }
+    
+    .battlefield .panel-heading{
+        padding:5px;
+    }
+    
+    .battlefield .btn{
+        font-size:1em;
+        padding:5px;            
+    }
+    
+    .battle-card .progress{
+    margin:1px;
+    height:3px;
+}
 }
